# doculyzer

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  config.yaml  project_structure.txt  pyproject.toml  requirements.txt  start.sh
lambda-connector-customizations/app_mgmt/metadata/: app_mgmt__globals.relationships.hml
lambda-connector-customizations/globals/: subgraph.yaml
lambda-connector-customizations/globals/connector/documents/: compose.yaml  config.yaml  connector.yaml  functions.py  requirements.txt  startup.py
lambda-connector-customizations/globals/connector/documents/.hasura-connector/: Dockerfile  connector-metadata.yaml
solr/: init-cores.sh
src/doculyzer/: __init__.py  crawler.py  main.py  openapi.yaml  relationship_detector.py  search.py
src/doculyzer/adapter/: __init__.py  base.py  confluence.py  enhanced_content.py  factory.py
src/doculyzer/content_resolver/: __init__.py  base.py  confluence.py  database.py  factory.py  file.py  jira.py  mongodb.py  s3.py  web.py
src/doculyzer/content_source/: __init__.py  confluence.py  database.py  factory.py  file.py  jira.py  s3.py  servicenow.py
src/doculyzer/document_parser/: __init__.py  base.py  csv.py  document_type_detector.py  docx.py  factory.py  html.py  html_parser.py  json.py  markdown.py  markdown_parser.py  pdf.py  pptx.py  text.py  xlsx.py  xml.py
src/doculyzer/embeddings/: base.py  contextual_embedding.py  factory.py  hugging_face.py  openai.py
src/doculyzer/relationships/: __init__.py  explicit.py  structural.py
src/doculyzer/storage/: __init__.py  base.py  element_relationship.py  factory.py  file.py  mongodb.py  postgres.py  sqlalchemy.py  sqlite.py
tests/: config.pg.yaml  config.yaml  test_ingestion.py
utilities/: update_version.py
