[build-system]
requires = ["setuptools>=60.15.0", "wheel", "build", "twine"]
build-backend = "setuptools.build_meta"

[project]
name = "doculyzer"
version = "0.15.0"
description = "Universal, Searchable, Structured Document Manager"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Kenneth Stott", email = "ken@hasura.io"}
]
keywords = ["document-management", "semantic-search", "embedding", "document-parsing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Text Processing",
    "Topic :: Database",
    "Natural Language :: English"
]

dependencies = [
    "sqlean.py~=3.47.0; platform_system == 'Darwin'",
    "sqlean.py~=3.47.0; platform_system == 'Linux' and platform_machine == 'x86_64'",
    "lxml~=5.4.0",
    "PyYAML~=6.0.2",
    "beautifulsoup4~=4.13.4",
    "Markdown~=3.8",
    "requests~=2.32.3",
    "SQLAlchemy~=2.0.40",
    # --- Modified torch dependency for CPU-only ---
    # Linux x86_64
    "torch @ https://download.pytorch.org/whl/cpu/torch-2.7.0%2Bcpu-cp39-cp39-manylinux2014_x86_64.whl ; python_version=='3.9' and sys_platform=='linux' and platform_machine=='x86_64'",
    "torch @ https://download.pytorch.org/whl/cpu/torch-2.7.0%2Bcpu-cp310-cp310-manylinux2014_x86_64.whl ; python_version=='3.10' and sys_platform=='linux' and platform_machine=='x86_64'",
    "torch @ https://download.pytorch.org/whl/cpu/torch-2.7.0%2Bcpu-cp311-cp311-manylinux2014_x86_64.whl ; python_version=='3.11' and sys_platform=='linux' and platform_machine=='x86_64'",
    # Windows x64
    "torch @ https://download.pytorch.org/whl/cpu/torch-2.7.0%2Bcpu-cp39-cp39-win_amd64.whl ; python_version=='3.9' and sys_platform=='win32'",
    "torch @ https://download.pytorch.org/whl/cpu/torch-2.7.0%2Bcpu-cp310-cp310-win_amd64.whl ; python_version=='3.10' and sys_platform=='win32'",
    "torch @ https://download.pytorch.org/whl/cpu/torch-2.7.0%2Bcpu-cp311-cp311-win_amd64.whl ; python_version=='3.11' and sys_platform=='win32'",
    # macOS x86_64
    "torch @ https://download.pytorch.org/whl/cpu/torch-2.7.0%2Bcpu-cp39-cp39-macosx_10_9_x86_64.whl ; python_version=='3.9' and sys_platform=='darwin' and platform_machine=='x86_64'",
    "torch @ https://download.pytorch.org/whl/cpu/torch-2.7.0%2Bcpu-cp310-cp310-macosx_10_9_x86_64.whl ; python_version=='3.10' and sys_platform=='darwin' and platform_machine=='x86_64'",
    "torch @ https://download.pytorch.org/whl/cpu/torch-2.7.0%2Bcpu-cp311-cp311-macosx_10_9_x86_64.whl ; python_version=='3.11' and sys_platform=='darwin' and platform_machine=='x86_64'",
    # macOS arm64 (Apple Silicon)
    "torch @ https://download.pytorch.org/whl/cpu/torch-2.7.0%2Bcpu-cp39-cp39-macosx_11_0_arm64.whl ; python_version=='3.9' and sys_platform=='darwin' and platform_machine=='arm64'",
    "torch @ https://download.pytorch.org/whl/cpu/torch-2.7.0%2Bcpu-cp310-cp310-macosx_11_0_arm64.whl ; python_version=='3.10' and sys_platform=='darwin' and platform_machine=='arm64'",
    "torch @ https://download.pytorch.org/whl/cpu/torch-2.7.0%2Bcpu-cp311-cp311-macosx_11_0_arm64.whl ; python_version=='3.11' and sys_platform=='darwin' and platform_machine=='arm64'",
    # --- End of modified torch dependency ---
    "numpy~=2.0.2",
    "sentence-transformers~=4.1.0", # This package also depends on torch. Pip should resolve this to the already specified torch version.
    "python-docx~=1.1.2",
    "openpyxl~=3.1.5",
    "pymupdf~=1.25.5",
    "python-pptx~=1.0.2",
    "pymongo~=4.12.0",
    "psycopg2-binary~=2.9.10",
    "python-dateutil~=2.9.0",
    "boto3~=1.38.3",
    "botocore~=1.38.4",
    "jsonpath-ng~=1.7.0",
    "openai~=1.76.0",
    "python-magic~=0.4.27",
    "mysql-connector-python~=9.3.0",
    "python-dotenv~=1.1.0",
    "wcmatch~=10.0",
    "neo4j~=5.28.1"
]

[project.optional-dependencies]
development = [
    "pytest~=8.3.5",
    "build~=1.2.2"
]

[project.urls]
# ... (rest of your file remains the same)
